<resources>
    <string name="app_name">渠天下招商</string>
    <string name="empty"> </string>
    <string name="number">0</string>
    <string name="hour">时</string>
    <string name="minute">分</string>
    <string name="second">秒</string>
    <string name="yuan">元</string>
    <string name="dan">单</string>
    <string name="share_wx">微信好友</string>
    <string name="share_wxCircle">朋友圈</string>
    <string name="share_qq">QQ好友</string>
    <string name="share_qzone">QQ空间</string>
    <string name="qrcode">二维码</string>
    <string name="face_qrcode">当面扫码</string>
    <string name="qrcode_content">扫描二维码，领取20元现金！</string>
    <string name="withdrawals_desc">注意：每周三且当前赏金大于%1$s元方可提现</string>

    <!--     文本描述      -->
    <string name="today">今天</string>
    <string name="yestoday">更早</string>
    <string name="description">description empty content</string>
    <string name="press_again_will_exit">再按一次返回键将关闭程序</string>
    <string name="login_privacy_txt">点击“登录”代表同意</string>
    <string name="login_privacy_click">《<u>法律声明和隐私策略</u>》</string>

    <!-- 四大模块 -->
    <string name="home">首页</string>
    <string name="project">悬赏</string>
    <string name="find">发现</string>
    <string name="my">我的</string>

    <string name="reportinfo">推荐客户详情</string>
    <string name="reportcustom">报备客户</string>
    <string name="projectReport">直接报备客户</string>
    <string name="project_introduce">项目介绍</string>
    <string name="project_explain">招商详情</string>
    <string name="project_silkbag">锦囊</string>
    <string name="project_silkbag_child1">公司发展历程</string>
    <string name="login">登录</string>
    <string name="commit">提交</string>
    <string name="send">发送</string>
    <string name="commit_sure">确认提交</string>
    <string name="apply_sure">确认申请</string>
    <string name="save_info">保存信息</string>
    <string name="commit_report">提交报备</string>
    <string name="usermanager">账号管理</string>
    <string name="verifing">审核中</string>
    <string name="followuping">跟进中</string>
    <string name="inspecting">考察中</string>
    <string name="signed">已签约</string>
    <string name="returned">已退回</string>
    <string name="locking">锁定中</string>
    <string name="nolock">未锁定</string>
    <string name="allRecord">全部记录</string>
    <string name="Pending_payment">待打款</string>
    <string name="Already_hit_the_money">已打款</string>
    <string name="Failure_to_play">打款失败</string>
    <string name="report_basic">基本信息</string>
    <string name="report_Follow_up_information">跟进信息</string>
    <string name="customcontent">客户被推荐后，将会被锁定，不可以再次推荐给其他项目，跟进的项目退回或签约后，自动解锁</string>
    <!--<string name="customcontent">报备起%d天内，您的客户将被锁定，不可再次报备给其他项目，达到期限或被退回后，自动解锁</string>-->
    <!--<string name="report_top_content">按行业推荐客户在企业审核通过后，将获得30元奖励，成功签约更能获得数千元奖励！建议选择按项目报备，佣金更高！</string>-->
    <string name="report_top_content">如果您不确定客户适合哪个项目，可以在这里推荐到该行业，随后我们将人工筛选、匹配，成交后您仍能获得千元赏金</string>

    <string name="add_project">悬赏大厅</string>
    <string name="direct_reporting">按行业推荐</string>
    <string name="custom_name">请填写客户姓名</string>
    <string name="custom_phone">客户的手机号</string>
    <string name="custom_industry">意向行业</string>
    <string name="agent_area">请选择代理区域</string>
    <string name="investment_budget">请选择客户预算/万元</string>
    <string name="planstart_time">请选择启动时间段</string>
    <string name="remarks">备注（选填）例：性别、年龄、过往投资经历、行业背景、经营现状等。请尽量详细描述，成交几率提升1倍</string>

    <string name="singularization">已签约</string>
    <string name="money_reward">赏金</string>
    <string name="sign_Commission">签约佣金</string>
    <string name="authentication_name">姓名</string>
    <string name="authentication_hint_name">请输入姓名</string>
    <string name="authentication_number">身份证号</string>
    <string name="authentication_hint_number">请输入身份证号</string>
    <string name="alipay_name">真实姓名</string>
    <string name="alipay_number">支付宝账号</string>
    <string name="alipay_count">提取金额</string>
    <string name="payee_name">收款人姓名</string>
    <string name="payee_bank">收款人银行</string>
    <string name="payee_bankAdress">开户行地区</string>
    <string name="bank_name">开户行名称</string>
    <string name="bank_card">银行卡号</string>
    <string name="withdrawals_money">提现金额</string>
    <string name="withdrawals_moneymore">提现金额必须大于0</string>
    <string name="commit_success">提交成功</string>
    <string name="commit_success_content">我们将在1-3个工作日内完成打款，具体参见各银行入账时间</string>
    <string name="i_konw">我知道了</string>
    <string name="no_yqnum">您还没有成功邀请过用户，赶紧来邀请吧！</string>


    <string name="user_photo">头像</string>
    <string name="user_nickname">昵称</string>
    <string name="user_company">公司</string>
    <string name="user_job">职位</string>
    <string name="save">保存</string>
    <string name="takephoto">相机</string>
    <string name="pickphoto">相册</string>
    <string name="reset">重置</string>
    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="cancelShare">取消分享</string>
    <string name="aleart_title">提示</string>
    <string name="aleart">温馨提示</string>
    <string name="versionUpdate">版本更新</string>
    <string name="update_later">稍后更新</string>
    <string name="update_now">立即更新</string>
    <string name="downloading">正在下载</string>
    <string name="downloaded">下载完成</string>
    <string name="updateapp">版本更新到  </string>
    <string name="nowifi">您当前非WIFI环境</string>
    <string name="following">关注</string>
    <string name="followcancel">取消关注</string>
    <string name="lookDetailed">查看明细</string>
    <string name="account_security">账户安全</string>
    <string name="appCheck">检查更新</string>
    <string name="cleancache">清除缓存</string>
    <string name="exitlogin">退出登录</string>
    <string name="upload_pics">上传照片</string>
    <string name="delete">删除客户</string>
    <string name="all">全部</string>
    <string name="bunosing">进行中</string>
    <string name="historybunos">历史活动</string>
    <string name="my_settled">企业入驻</string>
    <string name="settled_Apply">企业账号申请</string>
    <string name="my_Project">我的项目</string>
    <string name="my_bunos">奖励活动</string>
    <string name="Project_audit_list">审核列表</string>
    <string name="FollowUpRecord">跟进记录</string>
    <string name="backstageLogin">登录企业后台网页版</string>
    <string name="user_manager">账号管理</string>
    <string name="recommend_friends">邀请好友</string>
    <string name="add_contactss">增加人脉</string>
    <string name="newbie_guide">新手引导</string>
    <string name="orders_report">选项目</string>
    <string name="Recommend_custom">推荐客户</string>
    <string name="project_withdrawals">领赏金</string>
    <string name="my_follow">我的关注</string>
    <string name="my_invitation">我的邀请</string>
    <string name="my_contacts">我的人脉</string>
    <string name="invitation_info">邀请用户详情</string>
    <string name="invitation_QRcode">邀请二维码</string>
    <string name="my_report">已推荐客户</string>
    <string name="report_progress">跟进信息</string>
    <string name="select_customer">选择客户</string>
    <string name="my_customer">我的客户</string>
    <string name="add_customer">添加客户</string>
    <string name="my_withdrawals">账户提现</string>
    <string name="authentication">实名认证</string>
    <string name="apply_withdrawals">申请提现</string>
    <string name="withdrawals_success">提现成功</string>
    <string name="my_complaint">投诉建议</string>
    <string name="my_wanzhuan">玩转渠天下</string>
    <string name="my_about">关于渠天下</string>
    <string name="my_set">设置</string>
    <string name="project_search">搜索</string>
    <string name="setPassword">设置提现密码</string>
    <string name="updatePassword">修改提现密码</string>
    <string name="reSetPassword">重置提现密码</string>
    <string name="my_msgcenter">消息中心</string>
    <string name="my_balance">我的赏金</string>
    <string name="apply_record">申请记录</string>
    <string name="Withdrawals_apply_record">提现申请记录</string>
    <string name="apply_record_progress">提现进度</string>
    <string name="Alipay_Withdrawals">支付宝提现</string>
    <string name="Bankcard_Withdrawals">个人银行卡提现</string>
    <string name="cancle_Withdrawals">取消提现</string>
    <string name="renminbi">¥</string>
    <string name="withdrawalNum">可提现赏金</string>
    <string name="mine_balance">我的余额</string>
    <string name="balancelist">账户变动明细</string>
    <string name="balance_help">提现规则</string>
    <string name="my_reportRate">推荐质量分</string>
    <string name="change_detailed">质量分明细</string>
    <string name="custominfo">客户信息</string>
    <string name="yqnum">邀请人数</string>
    <string name="yqActprice">邀请赏金</string>
    <string name="update_apply_info"><u>修改申请信息</u></string>
    <string name="send_reminder">发提醒</string>
    <string name="contacts_Profit">人脉收益</string>
    <string name="contacts_list">人脉列表</string>
    <string name="select_contacts_user">选择用户</string>
    <string name="contacts_user_info">用户详情</string>
    <string name="contacts_all">全部人脉</string>
    <string name="sort_order">排序方式</string>
    <string name="SignedCustomerList">已签约列表</string>

    <string name="copy">复制</string>
    <string name="sendcode">发送验证码</string>
    <string name="restart_sendcode">重新发送</string>

    <string name="account_select_image_fail">选取图片失败</string>
    <string name="account_process_image_fail">处理图片失败</string>
    <string name="account_no_image">图片不存在</string>
    <string name="account_uploading_headpic">正在上传头像</string>
    <string name="account_change_head_image">更改用户头像</string>
    <string name="load_data_nocontent">这里没有内容哦～</string>
    <string name="load_data_nonetwork">网络出问题了～</string>
    <string name="load_data_network_set">请检查网络设置，点击屏幕，重新加载</string>


    <!-- 下拉刷新和上拉加载 -->
    <string name="pull_to_refresh">下拉可以刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新...</string>
    <string name="refresh_succeed">刷新完成</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="pullup_to_load">查看更多</string>
    <string name="release_to_load">释放立即加载</string>
    <string name="loading"> 正在加载... </string>
    <string name="load_succeed">加载完成</string>
    <string name="load_fail">加载失败</string>
    <string name="load_no_more">没有更多数据了哦</string>

    <!-- Download status ：%1$d -->
    <string name="download_progress">已下载 : </string>
    <string name="download_status_pause">暂停</string>
    <string name="download_status_be_pause">下载被暂停</string>
    <string name="download_status_re_download">重新下载</string>
    <string name="download_status_again_download">再次尝试</string>
    <string name="download_status_resume">继续下载</string>
    <string name="download_status_finish">下载完成！</string>

    <!-- Download error -->
    <string name="download_error">下载出错了：%1$s</string>
    <string name="download_error_server">服务器数据错误！</string>
    <string name="download_error_network">网络不可用，请检查网络！</string>
    <string name="download_error_storage">存储卡错误，请检查存储卡！</string>
    <string name="download_error_space">存储卡空间不足！</string>
    <string name="download_error_timeout">请求超时！</string>
    <string name="net_error_timeout">当前网络不稳定</string>
    <string name="download_error_un_know_host">找不到服务器。</string>
    <string name="download_error_url">下载地址异常</string>
    <string name="download_error_un">未知错误。</string>

</resources>
